<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">


    <TextView
        android:id="@+id/write_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/write_nfc_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <Button
        android:id="@+id/write_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/write"
        android:layout_marginBottom="25dp"
        />

    <TextView
        android:id="@+id/password_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:hint="p@$$W0RD1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_password"
        android:id="@+id/password_button"
        android:layout_marginBottom="25dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_queue_count"
        android:id="@+id/queue_button"/>

</LinearLayout>